refactoredGB and implemented FB Domain

--- a/Domain/FB/View/templates/form.tpl.phtml
+++ b/Domain/FB/View/templates/form.tpl.phtml
@@ -25,7 +25,7 @@
     }
 
 ?>
-<h1>Geschäftsbereich</h1>
+<h1>Fachbereich</h1>
 
 <div>
     <a href="<?php echo $this->backUrl; ?>">zurück</a>
@@ -48,7 +48,3 @@
     
     <input type="submit" value="speichern" />
 </form>
-    
-<br/><br/>
-
-<?php echo $this->FbList; ?>
