--- a/Domain/GB/View/templates/list.tpl.phtml
+++ b/Domain/GB/View/templates/list.tpl.phtml
@@ -28,6 +28,6 @@
             endforeach; 
         else: ?>
     <div>Keine GB vorhanden!</div>
-    <? endif; ?>
+    <?php endif; ?>
     
 </table>
