--- a/Domain/FB/View/templates/list.tpl.phtml
+++ b/Domain/FB/View/templates/list.tpl.phtml
@@ -28,6 +28,6 @@
             endforeach; 
         else: ?>
     <div>Keine FB vorhanden!</div>
-    <? endif; ?>
+    <?php endif; ?>
     
 </table>
